--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+psycopg2==2.6.2
 python-dateutil==2.5.3
 pytz==2016.7
 requests==2.11.1
 six==1.10.0
+SQLAlchemy==1.1.3
 Werkzeug==0.11.11
